asm_examples/test/errors/problemImport/a.asm
module a

import b (Bdom)

export Adom

signature:
	enum domain Adom ={AA1 | AA2}

definitions: